--- a/controller_manager_tests/package.xml
+++ b/controller_manager_tests/package.xml
@@ -18,11 +18,15 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>controller_interface</depend>
+  <depend>controller_interface</depend> <!-- exec_depend required for plugin -->
   <depend>controller_manager</depend>
-  <depend>hardware_interface</depend>
+  <depend>roscpp</depend>
 
-  <build_depend>roscpp</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>pluginlib</build_depend>
+
+  <build_export_depend>hardware_interface</build_export_depend>
+  <build_export_depend>pluginlib</build_export_depend>
 
   <exec_depend>controller_manager_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
