--- a/transmission_interface/package.xml
+++ b/transmission_interface/package.xml
@@ -17,13 +17,17 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <depend>boost</depend>
-  <depend>hardware_interface</depend>
-  <depend>pluginlib</depend>
   <depend>roscpp</depend>
   <depend>tinyxml</depend>
 
+  <build_depend>boost</build_depend>
   <build_depend>cmake_modules</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>pluginlib</build_depend>
+
+  <build_export_depend>boost</build_export_depend>
+  <build_export_depend>hardware_interface</build_export_depend>
+  <build_export_depend>pluginlib</build_export_depend>
 
   <test_depend>resource_retriever</test_depend>
 
