Resolve Boost dependency issues

--- a/hardware_interface/CMakeLists.txt
+++ b/hardware_interface/CMakeLists.txt
@@ -16,7 +16,7 @@ catkin_package(
   CATKIN_DEPENDS
     roscpp
   DEPENDS
-    Boost # TODO: Should header-only dependencies be DEPENDS or INCLUDE_DIRS?
+    Boost
 )
 
 
