--- a/combined_robot_hw_tests/CMakeLists.txt
+++ b/combined_robot_hw_tests/CMakeLists.txt
@@ -36,6 +36,7 @@ if(CATKIN_ENABLE_TESTING)
 
   add_executable(combined_robot_hw_dummy_app EXCLUDE_FROM_ALL src/dummy_app.cpp)
   target_link_libraries(combined_robot_hw_dummy_app ${PROJECT_NAME} ${catkin_LIBRARIES})
+  add_dependencies(tests combined_robot_hw_dummy_app)
 
   add_rostest_gtest(combined_robot_hw_test
     test/combined_robot_hw_test.test
@@ -56,8 +57,7 @@ endif()
 ## Install ##
 #############
 
-# NOTE: Libraries and plugins required for tests are installed since CI
-# runs tests out of the install space rather than the devel space
+# NOTE: Plugins required for tests must be installed
 
 if(CATKIN_ENABLE_TESTING)
 
