Use setuptools instead of distutils

--- a/rqt_controller_manager/package.xml
+++ b/rqt_controller_manager/package.xml
@@ -1,4 +1,8 @@
-<package format="2">
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>rqt_controller_manager</name>
   <version>0.19.0</version>
   <description>Graphical frontend for interacting with the controller manager.</description>
@@ -17,6 +21,8 @@
   <author email="adolfo.rodriguez@pal-robotics.com">Adolfo Rodríguez Tsouroukdissian</author>
 
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
 
   <exec_depend>controller_manager_msgs</exec_depend>
   <exec_depend>rospy</exec_depend>
