--- a/combined_robot_hw/package.xml
+++ b/combined_robot_hw/package.xml
@@ -1,4 +1,8 @@
-<package format="2">
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>combined_robot_hw</name>
   <version>0.19.0</version>
   <description>Combined Robot HW class.</description>
