--- a/joint_limits_interface/package.xml
+++ b/joint_limits_interface/package.xml
@@ -1,4 +1,8 @@
-<package format="2">
+<?xml version="1.0"?>
+<?xml-model
+  href="http://download.ros.org/schema/package_format3.xsd"
+  schematypens="http://www.w3.org/2001/XMLSchema"?>
+<package format="3">
   <name>joint_limits_interface</name>
   <version>0.19.0</version>
   <description>Interface for enforcing joint limits.</description>
