Migrate to new industrial_ci
See https://github.com/ros-industrial/industrial_ci/blob/master/doc/migration_guide.md

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 # Travis Continuous Integration Configuration File For ROS Control Projects
 # Author: Dave Coleman
-sudo: required
-dist: trusty
 language: generic
+services:
+  - docker
 
 notifications:
   email:
@@ -23,6 +23,6 @@ env:
     - ROS_DISTRO=melodic ROS_REPO=ros-testing
 
 install:
-  - git clone https://github.com/ros-industrial/industrial_ci.git .ci_config
+  - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
 script:
-  - .ci_config/travis.sh
+  - .industrial_ci/travis.sh
