--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ notifications:
 
 env:
   global:
-    - UPSTREAM_WORKSPACE=ros_control.rosinstall
+    - UPSTREAM_WORKSPACE='ros_control.rosinstall -ros_control'
   matrix:
-    - ROS_DISTRO=noetic ROS_REPO=ros
+#    - ROS_DISTRO=noetic ROS_REPO=ros
     - ROS_DISTRO=noetic ROS_REPO=ros-testing
 
 install:
