[tests] Split controller_manager_scripts.txt in two parts. The second part is now called controller_manager_interface_test. This fixes part 2 of issue #448

--- a/controller_manager_tests/CMakeLists.txt
+++ b/controller_manager_tests/CMakeLists.txt
@@ -52,6 +52,8 @@ if(CATKIN_ENABLE_TESTING)
   add_rostest(test/cm_msgs_utils_rostest.test)
 
   add_rostest(test/controller_manager_scripts.test DEPENDENCIES dummy_app)
+
+  add_rostest(test/controller_manager_interface_test.test DEPENDENCIES dummy_app)
 endif()
 
 
