Remove ros_controllers from UPSTREAM_WORKSPACE

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ notifications:
 
 env:
   global:
-    - UPSTREAM_WORKSPACE='ros_control.rosinstall -ros_control'
+    - UPSTREAM_WORKSPACE='ros_control.rosinstall -ros_control -ros_controllers'
   matrix:
     - ROS_DISTRO=noetic ROS_REPO=ros
     - ROS_DISTRO=noetic ROS_REPO=ros-testing
