--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,10 @@ notifications:
     on_failure: change #[always|never|change] # default: always
 
 env:
-  global:
-    - UPSTREAM_WORKSPACE='ros_control.rosinstall -ros_control -ros_controllers'
   matrix:
     - ROS_DISTRO=noetic ROS_REPO=ros
     - ROS_DISTRO=noetic ROS_REPO=ros-testing
-
+    - ROS_DISTRO=noetic NOT_TEST_DOWNSTREAM=true UPSTREAM_WORKSPACE='ros_control.rosinstall -ros_control -ros_controllers' DOWNSTREAM_WORKSPACE=github:ros_controls/ros_controllers#noetic-devel
 install:
   - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
 script:
