--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,13 @@ notifications:
       - bence.magyar.robotics@gmail.com
     on_success: change #[always|never|change] # default: change
     on_failure: change #[always|never|change] # default: always
-
 env:
+  global:
+    - UPSTREAM_WORKSPACE='ros_control.rosinstall -ros_control -ros_controllers'
   matrix:
     - ROS_DISTRO=noetic ROS_REPO=ros
     - ROS_DISTRO=noetic ROS_REPO=ros-testing
-    - ROS_DISTRO=noetic NOT_TEST_DOWNSTREAM=true UPSTREAM_WORKSPACE='ros_control.rosinstall -ros_control -ros_controllers' DOWNSTREAM_WORKSPACE=github:ros_controls/ros_controllers#noetic-devel
+    - DOWNSTREAM_WORKSPACE='ros_control.rosinstall -ros_control -realtime_tools -control_toolbox -control_msgs'
 install:
   - git clone --quiet --depth 1 https://github.com/ros-industrial/industrial_ci.git .industrial_ci -b master
 script:
