Handle building without GMock
These macros will not fail if GMock is not available at build time, and
will not produce a target under these circumstances. However, the
subsequent CMake lines are assuming that the target will exist, and
cause CMake to fail if not.

This change makes the packages tolerant to the absence of GMock at build
time.

--- a/controller_interface/CMakeLists.txt
+++ b/controller_interface/CMakeLists.txt
@@ -31,7 +31,9 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 
 if(CATKIN_ENABLE_TESTING)
   catkin_add_gmock(controller_base_test test/controller_base_test.cpp)
-  target_link_libraries(controller_base_test ${catkin_LIBRARIES})
+  if(TARGET controller_base_test)
+    target_link_libraries(controller_base_test ${catkin_LIBRARIES})
+  endif()
 endif()
 
 
