--- a/controller_manager/CMakeLists.txt
+++ b/controller_manager/CMakeLists.txt
@@ -62,8 +62,10 @@ if(CATKIN_ENABLE_TESTING)
     test/hwi_update_test.test
     test/hwi_update_test.cpp
   )
-  add_dependencies(${PROJECT_NAME}_hwi_update_test ${catkin_EXPORTED_TARGETS})
-  target_link_libraries(${PROJECT_NAME}_hwi_update_test ${PROJECT_NAME} ${catkin_LIBRARIES})
+  if(TARGET ${PROJECT_NAME}_hwi_update_test)
+    add_dependencies(${PROJECT_NAME}_hwi_update_test ${catkin_EXPORTED_TARGETS})
+    target_link_libraries(${PROJECT_NAME}_hwi_update_test ${PROJECT_NAME} ${catkin_LIBRARIES})
+  endif()
 endif()
 
 
