--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
           - {ROS_DISTRO: noetic, ROS_REPO: testing}
           - {ROS_DISTRO: noetic,
              UPSTREAM_WORKSPACE: 'ros_control.rosinstall -ros_control -ros_controllers',
-             DOWNSTREAM_WORKSPACE: 'github:ros-controls/ros_controllers#noetic-devel'}
+             DOWNSTREAM_WORKSPACE: 'ros_control.rosinstall -ros_control -realtime_tools -control_toolbox -control_msgs'}
     steps:
       - run: sudo apt-get update -qq && sudo apt-get upgrade
       - uses: actions/checkout@v1
