--- a/controller_manager/package.xml
+++ b/controller_manager/package.xml
@@ -30,15 +30,18 @@
   <build_depend>controller_manager_msgs</build_depend>
   <build_depend>hardware_interface</build_depend>
   <build_depend>pluginlib</build_depend>
+  <build_depend>std_msgs</build_depend>
 
   <build_export_depend>controller_interface</build_export_depend>
   <build_export_depend>controller_manager_msgs</build_export_depend>
   <build_export_depend>hardware_interface</build_export_depend>
   <build_export_depend>pluginlib</build_export_depend>
+  <build_export_depend>std_msgs</build_export_depend>
 
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>rosparam</exec_depend>
   <exec_depend>rospy</exec_depend>
+  <exec_depend>std_msgs</exec_depend>
 
   <test_depend>rostest</test_depend>
 </package>
