require REQUIRED build deps as build_depend
This package is not very critical and it is unclear
what it should do at all when testing is disabled.
But as the CMakeLists.txt requires these packages during either build,
they are NOT just test dependencies.

Required to make use of added functions to exclude test depends in builds
https://github.com/ros-infrastructure/bloom/pull/649

--- a/combined_robot_hw_tests/package.xml
+++ b/combined_robot_hw_tests/package.xml
@@ -24,6 +24,8 @@
 
   <depend>combined_robot_hw</depend>
   <depend>controller_manager</depend>
+  <depend>controller_manager_msgs</depend>
+  <depend>controller_manager_tests</depend>
   <depend>hardware_interface</depend> <!-- exec_depend required for plugin -->
   <depend>roscpp</depend>
 
@@ -31,8 +33,6 @@
 
   <build_export_depend>pluginlib</build_export_depend>
 
-  <test_depend>controller_manager_msgs</test_depend>
-  <test_depend>controller_manager_tests</test_depend>
   <test_depend>rostest</test_depend>
 
   <export>
